Bug 274688 - REGRESSION(278568@main): UI process crash when event replies are received during process termination
Summary: REGRESSION(278568@main): UI process crash when event replies are received dur...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Process Model (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Charlie Wolfe
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-05-24 15:26 PDT by Charlie Wolfe
Modified: 2024-06-06 09:19 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Charlie Wolfe 2024-05-24 15:26:29 PDT
rdar://128236488
Comment 1 Radar WebKit Bug Importer 2024-05-24 15:26:43 PDT
<rdar://problem/128708300>
Comment 2 Charlie Wolfe 2024-05-24 15:27:48 PDT
rdar://128236488
Comment 3 Charlie Wolfe 2024-05-24 15:31:40 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29088
Comment 4 EWS 2024-05-26 14:01:59 PDT
Committed 279333@main (4f158fce2282): <https://commits.webkit.org/279333@main>

Reviewed commits have been landed. Closing PR #29088 and removing active labels.
Comment 5 EWS 2024-06-06 09:19:55 PDT
Committed 272448.1071@safari-7618-branch (8ccee5737c31): <https://commits.webkit.org/272448.1071@safari-7618-branch>

Reviewed commits have been landed. Closing PR #1330 and removing active labels.