REGRESSION(278568@main): UI process crash when event replies are received during process termination https://bugs.webkit.org/show_bug.cgi?id=274688 rdar://128236488

Reviewed by Chris Dumez.

After 278568@main, if mouse/key event replies are received after web process termination has begun but
its `WebProcessProxy` has not been destructed, we try to dequeue from an empty queue. We should not try
to dequeue events if the current process is being terminated, because the events queues will have already
been cleared.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::sendMouseEvent):
(WebKit::WebPageProxy::sendKeyEvent):
* Tools/TestWebKitAPI/Tests/mac/KeyboardEventTests.mm:
(TestWebKitAPI::TEST(KeyboardEventTests, TerminateWebContentProcessDuringKeyEventHandling)):
* Tools/TestWebKitAPI/Tests/mac/MouseEventTests.mm:
(TestWebKitAPI::TEST(MouseEventTests, TerminateWebContentProcessDuringMouseEventHandling)):

Canonical link: https://commits.webkit.org/279333@main